--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   "devDependencies": {
     "@feathersjs/cli": "^5.0.31",
     "@feathersjs/rest-client": "^5.0.31",
+    "@types/axios": "^0.14.4",
     "@types/mocha": "^10.0.9",
     "@types/node": "^22.8.4",
     "axios": "^1.7.7",
