--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@feathersjs/socketio": "^5.0.31",
     "@feathersjs/transport-commons": "^5.0.31",
     "@feathersjs/typebox": "^5.0.31",
+    "@google/generative-ai": "^0.24.0",
     "@types/multer": "^1.4.12",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
